2007-02-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fix if krb4 is compiled but another auth is
			       used.

2007-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (STANDARD_COMMON_STUFF_NOT_FILE): Add sl.
	* common-src/statfs.c: Fix scale function.

2007-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Fix PARAM_HONOR_NODUMP.

2007-02-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Fix postscript crash.

2007-02-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c: Use dbfd.

2007-02-06  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.5.1p3 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.1p3).
	* NEWS: Update for 2.5.1p3

2007-02-06  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amcheck.8.xml,
	  server-src/amlabel.c: Merge from zmanda.

2007-02-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/clock.c (timesub): The result must always be positive.

2007-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: Fix for sed and IMPORT/EXPORT.

2007-02-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Add parentheses.

2007-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* docs/*.txt: Update from xml-docs.

2007-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* man/Makefile.am: Use http://docbook.sourceforge.net
	* man/xml-source/amadmin.8.xml, man/xml-source/amaespipe.8.xml,
	  man/xml-source/amanda.8.xml, man/xml-source/amanda-client.conf.5.xml,
	  man/xml-source/amanda.conf.5.xml, man/xml-source/amcheck.8.xml,
	  man/xml-source/amcrypt.8.xml, man/xml-source/amdump.8.xml,
	  man/xml-source/amfetchdump.8.xml, man/xml-source/amflush.8.xml,
	  man/xml-source/amgetconf.8.xml, man/xml-source/amlabel.8.xml,
	  man/xml-source/ammt.8.xml, man/xml-source/amrecover.8.xml,
	  man/xml-source/amreport.8.xml,